--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./contiguousAllocation.txt
-./indexedAllocation.txt
-./linkedAllocation.txt
+contiguousAllocation.txt
+indexedAllocation.txt
+linkedAllocation.txt
